@@ -114,27 +114,16 @@ CloudCmd._editFileName           = function(pParent){
             lA.contentEditable = true;
             KeyBinding.unSet();
             
-            var lDocumentOnclick = document.onclick;
-            
             /* setting event handler onclick
              * if user clicks somewhere keyBinded
              * backs
              */
-            document.onclick = (function(){
+            DOM.addOneTimeListener('click', function(){
                 var lA = DOM.getCurrentLink(pParent);
                 if (lA && lA.textContent !== '..')
                     lA.contentEditable = false;
                 
                 KeyBinding.set();
-                
-                /* backs old document.onclick 
-                 * and call it if it was
-                 * setted up earlier
-                 */
-                document.onclick = lDocumentOnclick;
-                
-                Util.exec(lDocumentOnclick);
-                
             });
     }
 };
