@@ -649,7 +649,8 @@ var CloudCommander, Util,
                  * maybe we offline, load font from local
                  * directory
                  */
-                DOM.cssSet({id:'local-droids-font',
+                DOM.cssSet({
+                    id      :'local-droids-font',
                     element : document.head,
                     inner   :   '@font-face {font-family: "Droid Sans Mono";'           +
                                 'font-style: normal;font-weight: normal;'               +
