@@ -265,7 +265,7 @@
                 Util.log('reading ' + lName);
                 
                 /* watching is file changed */
-                if(lConfig.appcache)        
+                if(lConfig.appcache)
                     CloudServer.AppCache.watch(lName);
                 
                 /* сохраняем указатель на response и имя */
@@ -282,43 +282,22 @@
                     CloudServer.Gzip?(lName+'_gzip') : lName);
                 
                 Util.log(Path.basename(lName));
-                            
-                var lMinify = CloudServer.Minify;
                 
                 /* object thet contains information
                  * about the source of file data
                  */
-                var lFromCache_o = {'cache': true};
-                
-                /* if cache is empty and Cache allowed and Minify_allowed 
-                 * and in Minifys cache is files, so save it to
-                 * CloudServer cache
-                 */
-                if(!lFileData && lMinify._allowed){
-                    Util.log('trying to read data from Minify.Cache');
-                    
-                    lFromCache_o.cache = false;
-                    
-                    if(lMinify.Cache)
-                        lFileData = lMinify.Cache[Path.basename(lName)];
-                }
                 var lReadFileFunc_f = CloudServer.getReadFileFunc(lName),
                 /* если там что-то есть передаём данные в функцию readFile */
                     lResult = lFileData;
                 
                 if(lResult){
-                    /* if file readed not from cache -
-                     * he readed from minified cache
-                     */
-                    lFromCache_o.minify = !lFromCache_o.cache;
-                                        
                     Util.log(lName + ' readed from cache');
                     
                     /* передаём данные с кэша,
                      * если gzip включен - сжатые
                      * в обратном случае - несжатые
                      */
-                    lReadFileFunc_f(undefined, lFileData, lFromCache_o);
+                    lReadFileFunc_f(undefined, lFileData, {'cache': true});
                 }
                 /* if file not in one of caches
                  * and minimizing setted then minimize it
@@ -654,7 +633,7 @@
      * @pData           - данные
      * @pFromCache_o    - прочитано с файла,
      *                      или из одного из кешей
-     * Пример {cache: false, minify: true}
+     * Пример {cache: false}
      */    
         var lReadFile = function(pError, pData, pFromCache_o){
             var lSrv = CloudServer;
