@@ -158,7 +158,7 @@ Util = exports || {};
      * @param pSubStr
      */
     Util.removeStr              = function(pStr, pSubStr){
-        return pStr.replace(pSubStr,'');
+        return pStr.replace(pSubStr, '');
     };
     
     /**
